# flexric-mec

./: .gitignore  CMakeLists.txt  Config.cmake.in  DEMO.md  Dockerfile  Dockerfile.hw.asn  README.md  flexric.conf  log.txt  measure-ping.sh
examples/emulator/agent/: CMakeLists.txt  test_agent.c
examples/flexran-stats-integration/: CMakeLists.txt  README.md  mac_test_agent.c  pdcp_test_agent.c  rrc_test_agent.c
src/agent/: CMakeLists.txt  asio_agent.c  asio_agent.h  async_event_agent.h  e2_agent.c  e2_agent.h  e2_agent_api.c  e2_agent_api.h  e2ap_agent.c  e2ap_agent.h  e2ap_endpoint_agent.c  e2ap_endpoint_agent.h  e2ap_msg_handler_agent.c  e2ap_msg_handler_agent.h  e2ap_multi_control.c  e2ap_multi_control.h  endpoint_agent.c  endpoint_agent.h  flexric_agent.h  ind_event.h  msg_handler_agent.c  msg_handler_agent.h  not_handler_agent.c  not_handler_agent.h  plugin_agent.c  plugin_agent.h
src/controller/flexran/: CMakeLists.txt  flexran_rtc.cc
src/controller/recursive_slicing/: CMakeLists.txt  conn_manager.cc  conn_manager.h  mac_stats_manager.cc  mac_stats_manager.h  nvs.cc  nvs.h  recursive_slicing.cc  res_virt.cc  res_virt.h  rslicing_manager.cc  rslicing_manager.h
src/lib/: CMakeLists.txt  async_event.h  ind_event.c  ind_event.h  pending_event_ric.c  pending_event_ric.h  pending_events.c  pending_events.h
src/lib/ap/: CMakeLists.txt  e2ap_ap.h  e2ap_ap_asn.c  e2ap_ap_asn.h  e2ap_ap_fb.c  e2ap_ap_fb.h  global_consts.h  type_defs.h
src/lib/ep/: CMakeLists.txt  e2ap_ep.c  e2ap_ep.h  sctp_msg.c  sctp_msg.h
src/lib/msg_hand/: CMakeLists.txt  e2_node_arr.c  e2_node_arr.h  reg_e2_nodes.c  reg_e2_nodes.h
src/msg/e2/: CMakeLists.txt  README.md  extract_asn1.awk
src/msg_dec/: CMakeLists.txt  e2ap_msg_dec_asn.c  e2ap_msg_dec_asn.h  e2ap_msg_dec_fb.c  e2ap_msg_dec_fb.h  e2ap_msg_dec_generic.h  e2ap_msg_free.c  e2ap_msg_free.h
src/msg_enc/: CMakeLists.txt  e2ap_msg_enc_asn.c  e2ap_msg_enc_asn.h  e2ap_msg_enc_fb.c  e2ap_msg_enc_fb.h  e2ap_msg_enc_generic.h
src/ric/: CMakeLists.txt  act_req.h  asio_ric.c  asio_ric.h  e2_node.c  e2_node.h  e2ap_ric.c  e2ap_ric.h  endpoint_ric.c  endpoint_ric.h  map_e2_node_sockaddr.c  map_e2_node_sockaddr.h  msg_handler_ric.c  msg_handler_ric.h  near_ric.c  near_ric.h  near_ric_api.c  near_ric_api.h  not_handler_ric.c  not_handler_ric.h  plugin_ric.c  plugin_ric.h
src/ric/iApp/: CMakeLists.txt  asio_iapp.c  asio_iapp.h  e2ap_iapp.c  e2ap_iapp.h  e42_iapp.c  e42_iapp.h  e42_iapp_api.c  e42_iapp_api.h  endpoint_iapp.c  endpoint_iapp.h  iapp_if_generic.h  ind_event.h  map_ric_id.c  map_ric_id.h  map_xapps_sockaddr.c  map_xapps_sockaddr.h  msg_handler_iapp.c  msg_handler_iapp.h  near_ric_if.h  near_ric_type.h  reg_e2_nodes.c.old  reg_e2_nodes.h.old  xapp_ric_id.c  xapp_ric_id.h
src/ric/iApps/: influx.c  influx.h  redis.c  redis.h  stdout.c  stdout.h  string_parser.c  string_parser.h  subscription_ric.h
src/server/: CMakeLists.txt  e2ap_endpoint_ric.c  e2ap_endpoint_ric.h  e2ap_msg_handler_ric.c  e2ap_msg_handler_ric.h  e2ap_server.c  e2ap_server.h  events.c  events.h  events_internal.h  flexric_rtc.c  ran_mgmt.c  ran_mgmt.h  sub_mgmt.c  sub_mgmt.h  subscription.h
src/sm/: CMakeLists.txt  gen_sm.py  sm_agent.h  sm_io.h  sm_proc_data.c  sm_proc_data.h  sm_ric.h
src/sm/agent_if/: README.md
src/sm/asn1_hw/: CMakeLists.txt  e2sm_hw_app.c  e2sm_hw_app.h  e2sm_hw_rf.c  e2sm_hw_rf.h
src/sm/fb_hw/: CMakeLists.txt  e2sm_hw_fb_app.c  e2sm_hw_fb_app.h  e2sm_hw_fb_rf.c  e2sm_hw_fb_rf.h
src/sm/fb_mac_stats/: CMakeLists.txt  mac_stats_defs.h  mac_stats_msg_dec.c  mac_stats_msg_dec.h  mac_stats_msg_enc.c  mac_stats_msg_enc.h  mac_stats_rf.c  mac_stats_rf.h
src/sm/fb_pdcp_stats/: CMakeLists.txt  pdcp_stats_defs.h  pdcp_stats_msg_dec.c  pdcp_stats_msg_dec.h  pdcp_stats_msg_enc.c  pdcp_stats_msg_enc.h  pdcp_stats_rf.c  (+1 more)
src/swig/: CMakeLists.txt  README.md  py_wrapp.c  py_wrapp.i  test.py
src/util/: CMakeLists.txt  byte_array.c  byte_array.h  compare.h  conf_file.c  conf_file.h  conversions.h  global_consts.h  ngran_types.h  type_defs.c  type_defs.h
src/xApp/: CMakeLists.txt  act_proc.c  act_proc.h  asio_xapp.c  asio_xapp.h  async_event_xapp.h  e2ap_xapp.c  e2ap_xapp.h  e42_xapp.c  e42_xapp.h  e42_xapp_api.c  e42_xapp_api.h  endpoint_xapp.c  endpoint_xapp.h  msg_dispatcher_xapp.c  msg_dispatcher_xapp.h  msg_generator_xapp.c  msg_generator_xapp.h  msg_handler_xapp.c  msg_handler_xapp.h  pending_event_xapp.c  pending_event_xapp.h  plugin_agent.c  plugin_ric.c  plugin_ric.h  sync_ui.c  sync_ui.h
test/: CMakeLists.txt  do_tests.py  e2ap_test.c  ric_sa.c  test_agent.c  test_cb_list.c  test_e2ap_enc_dec_asn.c  test_e2ap_enc_dec_fb.c  test_e2ap_encode_asn.c  test_e2ap_msg.c  test_hash_table.c  test_multi_controller.c  test_near_ric.c  test_ran_mgmt.c  test_relay_controller.c  test_relay_controller_asn.c  test_sub_mgmt.c
test/agent/: CMakeLists.txt  test_agent.c
test/agent-ric/: CMakeLists.txt  test_near_ric.c
test/agent-ric-xapp/: CMakeLists.txt  test_ag_ric_xapp.c  test_python.c
test/common/: fill_ind_data.c  fill_ind_data.h
test/encode_decode/: CMakeLists.txt  test_e2ap_enc_dec_asn.c  test_e2ap_encode_asn.c
test/flexran/: CMakeLists.txt  stats_test_agent.c
test/iapp-xapp/: CMakeLists.txt  near_ric_emulator.c  near_ric_emulator.h  test_ag_ric_xapp.c  test_iapp_xapp.c  test_python_iapp.c
test/recursive_slicing/: CMakeLists.txt  test_nvs.cc  test_res_virt.cc
test/ric/: CMakeLists.txt  near_ric_iapp.c  near_ric_nng.c
test/sm/: CMakeLists.txt
test/sm_asn1_hw/: CMakeLists.txt  e2sm_hw_agent.c  e2sm_hw_ric.c  test_e2sm_hw.c
test/sm_fb_hw/: CMakeLists.txt  e2sm_hw_fb_agent.c  e2sm_hw_fb_ric.c  test_e2sm_hw_fb.c
test/sm_fb_mac_stats/: CMakeLists.txt  test_mac_stats.c
test/sm_fb_pdcp_stats/: CMakeLists.txt  test_pdcp_stats.c
test/sm_fb_rlc_stats/: CMakeLists.txt  test_rlc_stats.c
test/sm_fb_rrc_conf/: CMakeLists.txt  test_rrc_conf.c
test/sm_fb_rrc_event/: CMakeLists.txt  e2e_rrc_event.c  test_rrc_event.c
test/sm_fb_rrc_stats/: CMakeLists.txt  test_rrc_stats.c
test/sm_fb_rslicing/: CMakeLists.txt  test_rslicing.c
(+1250 files in other folders)
