if(SM_HW)
  add_subdirectory(asn1_hw)
endif()
if (FlatCC_FOUND)
  add_subdirectory(fb_hw)
  add_subdirectory(fb_mac_stats)
  add_subdirectory(fb_pdcp_stats)
  add_subdirectory(fb_rlc_stats)
  add_subdirectory(fb_rrc_stats)
  add_subdirectory(fb_rrc_conf)
  add_subdirectory(fb_rrc_event)
  add_subdirectory(fb_rslicing)
endif()
add_subdirectory(relay)
